--- a/country-cards/src/App.css
+++ b/country-cards/src/App.css
@@ -99,7 +99,7 @@ body {
   font-size: 0.8em;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   width: fit-content;
-  margin-top: 20px;
+  margin: 20px 0px;
 }
 
 .countryFlagLarge {
